--- a/src/app/ingredient-form/ingredient-form.component.html
+++ b/src/app/ingredient-form/ingredient-form.component.html
@@ -19,50 +19,5 @@
     <button *ngFor="let ingredient of ingredients" class="btn btn-md btn-dark">{{ingredient.name}} <i
         class="fas fa-trash ml-3" (click)="deleteIngredient(ingredient)"></i></button>
   </div>
-  <div class="find-recipes">
-    <button [disabled]="!submitted" type="button" class="btn btn-blue-grey btn-lg btn-block"
-      (click)="getRecipes(ingredients)">
-      {{loading == false ? 'Search for recipes...' : 'Searching...'}}
-    </button>
-
-
   </div>
-
-  <div class="row"></div>
-
-  <!-- Card group -->
-  <div class="row card-group">
-    <div class="col-4" *ngFor="let recipe of recipes">
-      <!-- Card -->
-      <div class="card mb-4">
-        <!-- Card image -->
-
-        <div class="view overlay">
-          <a href="{{recipe.source_url}}">
-            <img class="card-img-top" src="{{recipe.image_url}}" alt="Card image cap">
-
-            <div class="mask rgba-white-slight"></div>
-          </a>
-
-        </div>
-
-        <!-- Card content -->
-        <div class="card-body">
-
-          <!-- Title -->
-          <h4 class="card-title">{{recipe.title}}</h4>
-          <!-- Text -->
-  
-      </div>
-      <!-- Card content -->
-  
-    </div>
-    <!-- Card -->
-  
-    
-    </div>
-    </div>
-    <!-- Card -->
-  </div>
-  
-  <!-- Card group -->
+  <app-recipe [ingredients]="ingredients"></app-recipe>
