--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,26 +1,24 @@
 <div class="find-recipes">
-  <button [disabled]="!submitted" type="button" class="btn btn-blue-grey btn-lg btn-block" (click)="getRecipes()">Search
-    for recipes</button>
+  <button 
+  
+   type="button" class="btn btn-blue-grey btn-lg btn-block"
+    (click)="getRecipes(ingredients)">
+    {{loading == false ? 'Search for recipes...' : 'Searching...'}}
+</button>
 </div>
-
-<div *ngFor="let recipe of recipes" class="card">
-
-  <!-- Card image -->
-  <div class="view overlay">
-    <img class="card-img-top" src="{{recipe.imageUrl}}" alt="Card image cap">
-    <a href="#!">
-      <div class="mask rgba-white-slight"></div>
-    </a>
-  </div>
-
-  <!-- Card content -->
-  <div class="card-body">
-    <!-- Title -->
-    <h4 class="card-title">{{recipe.title}}</h4>
-    <!-- Text -->
-    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-    <!-- Button -->
-    <a href="{{recipe.f2f_url}}" class="btn btn-primary">See recipe</a>
-
+<div class="row"></div>
+<div class="row card-group">
+  <div class="col-4" *ngFor="let recipe of recipes">
+    <div class="card mb-4">
+      <div class="view overlay">
+        <a href="{{recipe.source_url}}">
+          <img class="card-img-top" src="{{recipe.image_url}}" alt="Card image cap">
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+      <div class="card-body">
+        <h4 class="card-title">{{recipe.title}}</h4>
+      </div>
+    </div>
   </div>
 </div>
